fix gap trib

--- a/css/style.css
+++ b/css/style.css
@@ -613,7 +613,7 @@
         margin-bottom: 80px;
         display: flex;
         flex-direction: column;
-        gap: 40px;
+        gap: 24px;
     }
 
 
